<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/companyRV_onClick_showOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/show_orders" />

    <TextView
        android:id="@+id/companyRV_onClick_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/update_company" />

    <TextView
        android:id="@+id/companyRV_onClick_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/delete_company" />
</LinearLayout>